[gd_scene load_steps=19 format=3 uid="uid://hbslthwa82an"]

[ext_resource type="Script" path="res://scripts/vega.gd" id="1_8ustq"]
[ext_resource type="SpriteFrames" uid="uid://dx67kj4mt2ikc" path="res://sprites/vega/solo/body-spriteframes.tres" id="2_ux2p2"]
[ext_resource type="Texture2D" uid="uid://dd4aao34lro3c" path="res://sprites/vega/solo/arm_far_pistol.png" id="25_tcarr"]
[ext_resource type="Texture2D" uid="uid://bar1r27tymj3j" path="res://sprites/vega/solo/arm_far_rifle.png" id="26_h6tt2"]
[ext_resource type="Texture2D" uid="uid://cbw45uy50yl7n" path="res://sprites/vega/solo/arm_far_unarmed.png" id="27_oxg22"]
[ext_resource type="Texture2D" uid="uid://sn7bsj0rqco5" path="res://sprites/vega/solo/arm_near_pistol.png" id="27_yi6wj"]
[ext_resource type="Texture2D" uid="uid://u0apcto3dq7t" path="res://sprites/vega/solo/arm_near_rifle.png" id="28_og6i1"]
[ext_resource type="Texture2D" uid="uid://0v5hbvjxxf8d" path="res://sprites/vega/solo/arm_near_unarmed.png" id="30_r4lnx"]
[ext_resource type="PackedScene" uid="uid://1073tygqxsxy" path="res://scenes/ui/cursor.tscn" id="31_ry0sc"]
[ext_resource type="LabelSettings" uid="uid://dd88eotnpfti" path="res://themes/new_label_settings.tres" id="33_y8uw8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ld80"]
radius = 24.0
height = 90.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ctssl"]
polygon = PackedVector2Array(3, -38.5, 7, -37.5, 9, -32.5, 8, -29.5, 4, -30.5, 1, -24.5, 7, -18.5, 11, -15.5, 9, -10.5, 14, -4.5, 15, 1.5, 14, 8.5, 10, 9.5, 6, 9.5, 1, 8.5, -3, 6.5, -5, 2.5, -2, -0.5, 1, -7.5, -2, -15.5, -1, -24.5, -2, -31.5, -1, -35.5, 0, -38.5)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ap56f"]
polygon = PackedVector2Array(1, -15, 8, -13, 12, -5, 20, 0, 25, 9, 22, 20, 0, 20)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_sl5ey"]
polygon = PackedVector2Array(4, -35, 1, -30, 10, -25, 13, -27, 9, -36)

[sub_resource type="SpriteFrames" id="SpriteFrames_op8ms"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_tcarr")
}],
"loop": true,
"name": &"far_pistol",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_h6tt2")
}],
"loop": true,
"name": &"far_rifle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_oxg22")
}],
"loop": true,
"name": &"far_unarmed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_yi6wj")
}],
"loop": true,
"name": &"near_pistol",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_og6i1")
}],
"loop": true,
"name": &"near_rifle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_r4lnx")
}],
"loop": true,
"name": &"near_unarmed",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_o88tb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_e2lny"]
colors = PackedColorArray(0, 0, 0, 0.713726, 0.35, 0.35, 0.35, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_of27a"]
gradient = SubResource("Gradient_e2lny")
width = 80
height = 24
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="Vega" type="CharacterBody2D"]
z_index = 10
script = ExtResource("1_8ustq")

[node name="Character" type="CanvasGroup" parent="."]

[node name="Body" type="AnimatedSprite2D" parent="Character"]
sprite_frames = ExtResource("2_ux2p2")
animation = &"walk-forward-3-armed"
autoplay = "walk-forward-0-unarmed"

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(9, 7)
shape = SubResource("CapsuleShape2D_0ld80")
debug_color = Color(0, 0.595, 0.7, 0.117647)

[node name="LightOccluder2D" type="LightOccluder2D" parent="Collision"]
position = Vector2(-7, -0.5)
occluder = SubResource("OccluderPolygon2D_ctssl")

[node name="FlashOccluder1" type="LightOccluder2D" parent="Collision"]
position = Vector2(-10, -5)
occluder = SubResource("OccluderPolygon2D_ap56f")
occluder_light_mask = 2

[node name="FlashOccluder2" type="LightOccluder2D" parent="Collision"]
position = Vector2(-10, -5)
occluder = SubResource("OccluderPolygon2D_sl5ey")
occluder_light_mask = 2

[node name="ArmsPivot" type="Marker2D" parent="."]
position = Vector2(4, -14)
gizmo_extents = 24.0

[node name="Arms" type="CanvasGroup" parent="ArmsPivot"]

[node name="Far" type="AnimatedSprite2D" parent="ArmsPivot/Arms"]
z_index = -2
position = Vector2(-6, 16)
sprite_frames = SubResource("SpriteFrames_op8ms")
animation = &"near_pistol"
autoplay = "near_rifle"

[node name="Weapon" type="AnimatedSprite2D" parent="ArmsPivot/Arms"]
position = Vector2(30, -5)
sprite_frames = SubResource("SpriteFrames_o88tb")
autoplay = "default"

[node name="Near" type="AnimatedSprite2D" parent="ArmsPivot/Arms"]
z_index = 1
position = Vector2(-6, 16)
sprite_frames = SubResource("SpriteFrames_op8ms")
animation = &"far_pistol"
autoplay = "near_rifle"

[node name="RayCast2D" type="RayCast2D" parent="ArmsPivot/Arms"]
position = Vector2(50, -8)
target_position = Vector2(4096, 0)
collision_mask = 4
hit_from_inside = true

[node name="Line2D3" type="Line2D" parent="ArmsPivot/Arms/RayCast2D"]
visible = false
z_index = 999
points = PackedVector2Array(15, 15, -15, -15, 0, 0, 15, -15, -15, 15)
width = 1.0
default_color = Color(3.03224e-06, 0.679298, 0.172165, 1)

[node name="Line2D2" type="Line2D" parent="ArmsPivot"]
visible = false
z_index = 1000
position = Vector2(10, 0)
points = PackedVector2Array(-10, 0, 50, 0, 40, -3, 40, 3, 50, 0)
width = 1.0
default_color = Color(0.915564, 0.352624, 0.214235, 1)

[node name="Line2D" type="Line2D" parent="."]
visible = false
z_index = 800
points = PackedVector2Array(0, 0, 0, 0)
width = 1.0
default_color = Color(1.44392e-06, 0.668997, 0.388098, 1)

[node name="Cursor" parent="." instance=ExtResource("31_ry0sc")]

[node name="Label" type="Label" parent="."]
offset_left = -14.0
offset_top = -65.0
offset_right = 26.0
offset_bottom = -42.0
text = "0000"
label_settings = ExtResource("33_y8uw8")

[node name="ShadowRay" type="RayCast2D" parent="."]
target_position = Vector2(0, 200)

[node name="ShadowSprite" type="Sprite2D" parent="."]
position = Vector2(6, 51)
texture = SubResource("GradientTexture2D_of27a")

[connection signal="frame_changed" from="Character/Body" to="." method="_on_body_frame_changed"]
